// Vitest Snapshot v1

exports[`components > N8nCallout > should render additional slots correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout custom\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"code-branch\\" size=\\"large\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a secondary callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp; <n8n-link-stub size=\\"small\\">Do something!</n8n-link-stub>
  </div>
  <n8n-link-stub theme=\\"secondary\\" size=\\"small\\" bold=\\"true\\" underline=\\"true\\" to=\\"https://n8n.io\\">Learn more</n8n-link-stub>
</div>"
`;

exports[`components > N8nCallout > should render custom theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout custom\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"code-branch\\" size=\\"large\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a secondary callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render danger theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout danger\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"times-circle\\" size=\\"large\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a danger callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render info theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout info\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"info-circle\\" size=\\"large\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is an info callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render secondary theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout secondary\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"info-circle\\" size=\\"medium\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a secondary callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render success theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout success\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"check-circle\\" size=\\"large\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a success callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;

exports[`components > N8nCallout > should render warning theme correctly 1`] = `
"<div role=\\"alert\\" class=\\"n8n-callout callout warning\\">
  <div class=\\"messageSection\\">
    <div class=\\"icon\\">
      <n8n-icon-stub icon=\\"exclamation-triangle\\" size=\\"large\\"></n8n-icon-stub>
    </div>
    <n8n-text-stub size=\\"small\\" tag=\\"span\\">
      <n8n-text-stub size=\\"small\\" tag=\\"span\\">This is a warning callout.</n8n-text-stub>
    </n8n-text-stub> &nbsp;
  </div>
</div>"
`;
